--- a/index.html
+++ b/index.html
@@ -1,1 +1,2 @@
-Hola mundo de github pages 
+<h2>Hola mundo de github pages </h2>
+<BODY BGCOLOR="#FFFFFF" TEXT="#000000" LINK="#0000FF" VLINK="#800080" ALINK="#FF0000">
