se crea cuerpo de html

--- a/index.html
+++ b/index.html
@@ -1,4 +1,9 @@
-<html>
-<h2>Hola mundo de github pages </h2>
-<BODY BGCOLOR="#FFFFFF" TEXT="#000000" LINK="#0000FF" VLINK="#800080" ALINK="#FF0000">
-</BODY></html>
+<!DOCTYPE html>
+<html lang="es-mx">
+    <head>
+        <meta charset="utf-8"/>
+        <title> Alejandro Martinez </title>
+<body BGCOLOR="#FFFFFF" TEXT="#000000" LINK="#0000FF" VLINK="#800080" ALINK="#FF0000">
+    <h2> Pagina principal </h2>   
+</body>
+</html>
