se agrega color

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="es-mx">
     <head>
         <meta charset="utf-8"/>
-        <title> Alejandro Martinez </title>
+        <title> Alejandro Martinez </title></head>
 <body BGCOLOR="#FFFFFF" TEXT="#000000" LINK="#0000FF" VLINK="#800080" ALINK="#FF0000">
     <h2> Pagina principal </h2>   
 </body>
