se actualiza body

--- a/index.html
+++ b/index.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
 <html lang="es-mx">
-    <head>
+<head>
         <meta charset="utf-8"/>
-        <title> Alejandro Martinez </title></head>
-<body BGCOLOR="#FFFFFF" TEXT="#000000" LINK="#0000FF" VLINK="#800080" ALINK="#FF0000">
+        <title> Alejandro Martinez </title>
+</head>
+<body{
+  background-color: #F5F5F5;
+} >
     <h2> Pagina principal </h2>   
 </body>
 </html>
