--- a/index.html
+++ b/index.html
@@ -4,9 +4,7 @@
         <meta charset="utf-8"/>
         <title> Alejandro Martinez </title>
 </head>
-<body{
-  background-color: #F5F5F5;
-} >
+<body background-color: #493838;>
     <h2> Pagina principal </h2>   
 </body>
 </html>
