--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
         <meta charset="utf-8"/>
         <title> Alejandro Martinez </title>
 </head>
-<body background-color: #493838;>
+<body background-color: #"493838">
     <h2> Pagina principal </h2>   
+    <h1> Se agregan colores al fondo
 </body>
 </html>
