--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
         <meta charset="utf-8"/>
         <title> Alejandro Martinez </title>
 </head>
-<body bgcolor: #"493838">
-    <h2> Pagina principal </h2>   
-    <h1> Se agregan colores al fondo
+<body bgcolor="#493838">
+    <h2> Portafolio principal de Alex MTz </h2>   
+
 </body>
 </html>
