Centrando titulo y dando formato

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <title> Alejandro Martinez </title>
 </head>
 <body bgcolor="#493838">
-    <h2> Portafolio principal de Alex MTz </h2>   
+    <h2 align=Center> Portafolio Oficial de Alex MTz </h2>   
 
 </body>
 </html>
