logo github y enlace

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
 </head>
 <body bgcolor="#493838">
     <h2 align=Center> Portafolio Oficial de Alex MTz </h2>   
+    <a href="https://github.com/alexmbar">
+    <img src="\images\GitHub-Mark-120px-plus.png"/>
+    </a>
 
 </body>
 </html>
