--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <a href="https://github.com/alexmbar">
     <img src="\images\GitHub-Mark-120px-plus.png"/>
     </a>
+    <a href="https://www.linkedin.com/in/alejandro-martinez-6339aa66">
+    <img src="\images\Logo-White-121px-R.png"/>
+    </a>
 
 </body>
 </html>
