--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
 <body bgcolor="#493838">
     <h2 align=Center> Portafolio Oficial de Alex MTz </h2>   
     <a href="https://github.com/alexmbar">
-    <img src="\images\GitHub-Mark-120px-plus.png"/>
+    <img src="\images\GitHub-Mark-64px.png"/>
     </a>
     <a href="https://www.linkedin.com/in/alejandro-martinez-6339aa66">
-    <img src="\images\Logo-White-121px-R.png"/>
+    <img src="\images\In-2C-66px-R.png"/>
     </a>
 
 </body>
