--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="es-mx">
 <head>
+        <link rel="stylesheet" type="text/css" href="style.css">
         <meta charset="utf-8"/>
         <title> Alejandro Martinez </title>
 </head>
-<body background="\images\ipad-606764_1920.jpg" style="background-repeat: no-repeat; background-position: center center;">
     <h2 align=Center> Portafolio Oficial de Alex MTz </h2>   
     <a href="https://github.com/alexmbar">
     <img src="\images\GitHub-Mark-64px.png"/>
