--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <meta charset="utf-8"/>
         <title> Alejandro Martinez </title>
 </head>
+<body>
     <h2 align=Center> Portafolio Oficial de Alex MTz </h2>   
     <a href="https://github.com/alexmbar">
     <img src="\images\GitHub-Mark-64px.png"/>
