imagen de fondo css 6

--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
         <link rel="stylesheet" type="text/css" href="style.css">
         <meta charset="utf-8"/>
         <title> Alejandro Martinez </title>
+        <link rel="stylesheet" href="style.css" />
 </head>
 <body>
+  
     <h2 align=Center> Portafolio Oficial de Alex MTz </h2>   
     <a href="https://github.com/alexmbar">
     <img src="\images\GitHub-Mark-64px.png"/>
@@ -13,16 +15,7 @@
     <a href="https://www.linkedin.com/in/alejandro-martinez-6339aa66">
     <img src="\images\In-2C-66px-R.png"/>
     </a>
-
-
- 
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/jquery.scrolly.min.js"></script>
-			<script src="assets/js/jquery.scrollzer.min.js"></script>
-			<script src="assets/js/skel.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<script src="assets/js/ie/respond.min.js"> </script>
-			<script src="assets/js/main.js"></script>
+    
 
 </body>
 </html>
