uso del div - bottom y top

--- a/index.html
+++ b/index.html
@@ -1,13 +1,20 @@
 <!DOCTYPE html>
 <html lang="es-mx">
-<head>
+    <head>
         <link rel="stylesheet" type="text/css" href="style.css">
         <meta charset="utf-8"/>
         <title> Alejandro Martinez </title>
         <link rel="stylesheet" href="style.css" />
-</head>
-<body>
-  
+    </head>
+    <body>
+        <div id="header">
+            <div class="top">
+                <h2>Esto es el header - top </h2>
+            </div>
+            <div class="botom">
+                <h2>Esto es el header - botom </h2>
+            </div>
+        </div>
     <h2 align=Center> Portafolio Oficial de Alex MTz </h2>   
     <a href="https://github.com/alexmbar">
     <img src="\images\GitHub-Mark-64px.png"/>
@@ -17,5 +24,5 @@
     </a>
     
 
-</body>
+    </body>
 </html>
