--- a/index.html
+++ b/index.html
@@ -1,19 +1,29 @@
 <!DOCTYPE html>
 <html lang="es-mx">
     <head>
-        <link rel="stylesheet" type="text/css" href="style.css">
-        <meta charset="utf-8"/>
         <title> Alejandro Martinez </title>
-        <link rel="stylesheet" href="style.css" />
+        <meta charset="utf-8"/>
+       <link rel="stylesheet" href="style.css" />
     </head>
     <body>
-        <div id="header">
+        <!-- <div id="header">
             <div class="top">
                 <h2>Esto es el header - top </h2>
             </div>
             <div class="botom">
                 <h2>Esto es el header - botom </h2>
             </div>
+        </div> --> 
+        <div id="main">
+            <!-- <section id="top" class="one dark cover">--><!-- class probablente perteneciente en el css --> 
+            <section id="top"> 
+                <div class="container">
+                    <header>
+                        <h2 class="alt"> Portafolio </h2>
+                    </header>
+                </div>
+            </section>
+
         </div>
     <h2 align=Center> Portafolio Oficial de Alex MTz </h2>   
     <a href="https://github.com/alexmbar">
