--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <html>
 	<head>
-		<title>Prologue by HTML5 UP</title>
+		<title>Alejandro Martinez</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 
@@ -18,7 +18,7 @@
 
 					<!-- Logo -->
 						<div id="logo">
-							<span class="image avatar48"><img src="images/avatar.jpg" alt="" /></span>
+							<!-- Avatar <span class="image avatar48"><img src="images/avatar.jpg" alt="" /></span> --> 
 							<h1 id="title">Alejandro Martinez</h1>
 						</div>
 
@@ -27,7 +27,7 @@
 							
 							<ul>
 								<li><a href="#top" id="top-link" class="skel-layers-ignoreHref"><span class="icon fa-home">Intro</span></a></li>
-								<li><a href="#portfolio" id="portfolio-link" class="skel-layers-ignoreHref"><span class="icon fa-th">Portfolio</span></a></li>
+								<!--Experiencia <li><a href="#portfolio" id="portfolio-link" class="skel-layers-ignoreHref"><span class="icon fa-th">Portfolio</span></a></li> --> 
 								<li><a href="#about" id="about-link" class="skel-layers-ignoreHref"><span class="icon fa-user">Sobre mi</span></a></li>
 								<li><a href="#contact" id="contact-link" class="skel-layers-ignoreHref"><span class="icon fa-envelope">Contacto</span></a></li>
 							</ul>
@@ -64,14 +64,14 @@
 								vitae natoque dictum sollicitudin elementum.</p>
 							</header>
 
-							<footer>
-								<a href="#portfolio" class="button scrolly">Magna Aliquam</a>
-							</footer>
+		<!-- Experiencia					<footer>
+								<a href="#portfolio" class="button scrolly">texto blalblalaba</a>
+							</footer>   <--> 
 
-						</div>
+						</div> 
 					</section>
 
-				<!-- Portfolio -->
+			<!-- Experiencia 
 					<section id="portfolio" class="two">
 						<div class="container">
 
@@ -79,10 +79,7 @@
 								<h2>Portfolio</h2>
 							</header>
 
-							<p>Vitae natoque dictum etiam semper magnis enim feugiat convallis convallis
-							egestas rhoncus ridiculus in quis risus amet curabitur tempor orci penatibus.
-							Tellus erat mauris ipsum fermentum etiam vivamus eget. Nunc nibh morbi quis
-							fusce hendrerit lacus ridiculus.</p>
+							<p>blalblalalblalba aqui poner la Experiencia.</p>
 
 							<div class="row">
 								<div class="4u 12u$(mobile)">
@@ -131,7 +128,7 @@
 
 						</div>
 					</section>
-
+								fin Experiencia	-->
 				<!-- Sobre mi -->
 					<section id="about" class="three">
 						<div class="container">
@@ -142,12 +139,12 @@
 
 							<a href="#" class="image featured"><img src="images/pic08.jpg" alt="" /></a>
 
-							<p>Tincidunt eu elit diam magnis pretium accumsan etiam id urna. Ridiculus
-							ultricies curae quis et rhoncus velit. Lobortis elementum aliquet nec vitae
-							laoreet eget cubilia quam non etiam odio tincidunt montes. Elementum sem
-							parturient nulla quam placerat viverra mauris non cum elit tempus ullamcorper
-							dolor. Libero rutrum ut lacinia donec curae mus vel quisque sociis nec
-							ornare iaculis.</p>
+							<p>Objetivo:  
+Desarrollar y crecer tanto profesional como laboralmente. Compartir mis conocimientos y habilidades para lograr un desempeño satisfactorio tanto mío como de la empresa, así como ser capaz de desempeñar el puesto de manera eficiente y destacada. 
+ 
+Interés Profesional:  
+Redes, Servidores, Pruebas de Software, Linux. 
+</p>
 
 						</div>
 					</section>
