--- a/index.html
+++ b/index.html
@@ -37,13 +37,13 @@
 
 				<div class="bottom">
 
-					<!-- Social Icons -->
+					<!-- Redes sociales -->
 						<ul class="icons">
 							<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
 							<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
 							<li><a href="#" class="icon fa-github"><span class="label">Github</span></a></li>
-							<li><a href="#" class="icon fa-dribbble"><span class="label">Dribbble</span></a></li>
-							<li><a href="#" class="icon fa-envelope"><span class="label">Email</span></a></li>
+						<!-->	<li><a href="#" class="icon fa-dribbble"><span class="label">Dribbble</span></a></li> -->
+							<li><a href="alexmbar891@gmail.com" class="icon fa-envelope"><span class="label">Email</span></a></li>
 						</ul>
 
 				</div>
@@ -139,10 +139,10 @@
 
 							<a href="#" class="image featured"><img src="images/pic08.jpg" alt="" /></a>
 
-							<p>Objetivo:  
-Desarrollar y crecer tanto profesional como laboralmente. Compartir mis conocimientos y habilidades para lograr un desempeño satisfactorio tanto mío como de la empresa, así como ser capaz de desempeñar el puesto de manera eficiente y destacada. 
- 
-Interés Profesional:  
+							<p> <strong><h2> Objetivo:</strong> <br> </h2>
+Desarrollar y crecer tanto profesional como laboralmente. Compartir mis conocimientos y habilidades para lograr un desempeño satisfactorio tanto mío como de la empresa, así como ser capaz de desempeñar el puesto de manera eficiente y destacada.<br>
+  
+<strong><h2>Interés Profesional:</strong><br></h2>
 Redes, Servidores, Pruebas de Software, Linux. 
 </p>
 
@@ -170,7 +170,7 @@ Redes, Servidores, Pruebas de Software, Linux.
 										<textarea name="message" placeholder="Message"></textarea>
 									</div>
 									<div class="12u$">
-										<input type="submit" value="Send Message" />
+										<input type="submit" value="Enviar mensaje" />
 									</div>
 								</div>
 							</form>
@@ -185,7 +185,7 @@ Redes, Servidores, Pruebas de Software, Linux.
 
 				<!-- Copyright -->
 					<ul class="copyright">
-						<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+						<li>&copy; 2017. Todos los derechos reservados.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 					</ul>
 
 			</div>
