--- a/index.html
+++ b/index.html
@@ -39,10 +39,10 @@
 
 					<!-- Redes sociales -->
 						<ul class="icons">
-							<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-							<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-							<li><a href="#" class="icon fa-github"><span class="label">Github</span></a></li>
-						<!-->	<li><a href="#" class="icon fa-dribbble"><span class="label">Dribbble</span></a></li> -->
+						<!--	<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li> --> 
+						<!--	<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li> -->
+							<li><a href="https://github.com/alexmbar" class="icon fa-github"><span class="label">Github</span></a></li>
+						<!--	<li><a href="#" class="icon fa-dribbble"><span class="label">Dribbble</span></a></li> -->
 							<li><a href="alexmbar891@gmail.com" class="icon fa-envelope"><span class="label">Email</span></a></li>
 						</ul>
 
@@ -137,13 +137,13 @@
 								<h2>Sobre mi</h2>
 							</header>
 
-							<a href="#" class="image featured"><img src="images/pic08.jpg" alt="" /></a>
+						<!-- imagen cabezera	<a href="#" class="image featured"><img src="images/pic08.jpg" alt="" /></a> --> 
 
 							<p> <strong><h2> Objetivo:</strong> <br> </h2>
 Desarrollar y crecer tanto profesional como laboralmente. Compartir mis conocimientos y habilidades para lograr un desempeño satisfactorio tanto mío como de la empresa, así como ser capaz de desempeñar el puesto de manera eficiente y destacada.<br>
   
 <strong><h2>Interés Profesional:</strong><br></h2>
-Redes, Servidores, Pruebas de Software, Linux. 
+Fronted, Backend, Seguridad en Servidores, Bases de datos. 
 </p>
 
 						</div>
@@ -161,8 +161,11 @@ Redes, Servidores, Pruebas de Software, Linux.
 							mauris non cum elit tempus ullamcorper dolor. Libero rutrum ut lacinia
 							donec curae mus. Eleifend id porttitor ac ultricies lobortis sem nunc
 							orci ridiculus faucibus a consectetur. Porttitor curae mauris urna mi dolor.</p>
+									<div class="12u$">
+										<input type="submit" value="Enviar mensaje" />
+									</div>
 
-							<form method="post" action="#">
+							<!-- metodo post <form method="post" action="#">
 								<div class="row">
 									<div class="6u 12u$(mobile)"><input type="text" name="name" placeholder="Name" /></div>
 									<div class="6u$ 12u$(mobile)"><input type="text" name="email" placeholder="Email" /></div>
@@ -173,7 +176,7 @@ Redes, Servidores, Pruebas de Software, Linux.
 										<input type="submit" value="Enviar mensaje" />
 									</div>
 								</div>
-							</form>
+							</form> -->
 
 						</div>
 					</section>
