--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 						<!--	<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li> -->
 							<li><a href="https://github.com/alexmbar" class="icon fa-github"><span class="label">Github</span></a></li>
 						<!--	<li><a href="#" class="icon fa-dribbble"><span class="label">Dribbble</span></a></li> -->
-							<li><a href="alexmbar891@gmail.com" class="icon fa-envelope"><span class="label">Email</span></a></li>
+							<li><a href="mailito:alexmbar891@gmail.com" class="icon fa-envelope"><span class="label">Email</span></a></li>
 						</ul>
 
 				</div>
@@ -134,7 +134,7 @@
 						<div class="container">
 
 							<header>
-								<h2>Sobre mi</h2>
+								<h1>Sobre mi</h1>
 							</header>
 
 						<!-- imagen cabezera	<a href="#" class="image featured"><img src="images/pic08.jpg" alt="" /></a> --> 
@@ -154,15 +154,12 @@ Fronted, Backend, Seguridad en Servidores, Bases de datos.
 						<div class="container">
 
 							<header>
-								<h2>Contacto</h2>
+								<h1>Contacto</h1>
 							</header>
 
-							<p>Elementum sem parturient nulla quam placerat viverra
-							mauris non cum elit tempus ullamcorper dolor. Libero rutrum ut lacinia
-							donec curae mus. Eleifend id porttitor ac ultricies lobortis sem nunc
-							orci ridiculus faucibus a consectetur. Porttitor curae mauris urna mi dolor.</p>
-									<div class="12u$">
-										<input type="submit" value="Enviar mensaje" />
+							<p>Sería un placer para mí poder ampliar la información sobre mi formación profesional y mis competencias a través de una entrevista personal. Para ello, no dude en contactar conmigo</p>
+									<div>
+										<input value="Enviar mensaje" onclick="location.href='mailito:alexmbar891@gmail.com'"/>
 									</div>
 
 							<!-- metodo post <form method="post" action="#">
