enviar mensaje con correo 2

--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@ Fronted, Backend, Seguridad en Servidores, Bases de datos.
 							</header>
 
 							<p>Sería un placer para mí poder ampliar la información sobre mi formación profesional y mis competencias a través de una entrevista personal. Para ello, no dude en contactar conmigo</p>
-									<div>
+									<div class="12u$">
 										<input value="Enviar mensaje" onclick="location.href='mailito:alexmbar891@gmail.com'"/>
 									</div>
 
