--- a/index.html
+++ b/index.html
@@ -58,10 +58,9 @@
 						<div class="container">
 
 							<header>
-								<h2 class="alt">Hi! I'm <strong>Prologue</strong>, a <a href="http://html5up.net/license">free</a> responsive<br />
-								site template designed by <a href="http://html5up.net">HTML5 UP</a>.</h2>
-								<p>Ligula scelerisque justo sem accumsan diam quis<br />
-								vitae natoque dictum sollicitudin elementum.</p>
+								<h2 class="alt"> <strong>Alejandro Martinez</strong><br/></h2>
+								<p>Soy una persona con habilidades de liderazgo comprometida el trabajo, <br />
+								creativa y entusiasta ante los nuevos retos.</p>
 							</header>
 
 		<!-- Experiencia					<footer>
@@ -134,7 +133,7 @@
 						<div class="container">
 
 							<header>
-								<h1>Sobre mi</h1>
+								<h3>Sobre mi</h3>
 							</header>
 
 						<!-- imagen cabezera	<a href="#" class="image featured"><img src="images/pic08.jpg" alt="" /></a> --> 
@@ -154,12 +153,13 @@ Fronted, Backend, Seguridad en Servidores, Bases de datos.
 						<div class="container">
 
 							<header>
-								<h1>Contacto</h1>
+								<h3>Contacto</h3>
 							</header>
 
-							<p>Sería un placer para mí poder ampliar la información sobre mi formación profesional y mis competencias a través de una entrevista personal. Para ello, no dude en contactar conmigo</p>
+							<p>Sería un placer para mí poder ampliar la información sobre mi formación profesional y mis competencias a través de una entrevista personal. Para ello, no dude en contactar conmigo.</p>
 									<div class="12u$">
-										<input value="Enviar mensaje" onclick="location.href='mailito:alexmbar891@gmail.com'"/>
+										<a href="mailito:alexmbar891@gmail.com">
+										<input value="Enviar mensaje" /></a>
 									</div>
 
 							<!-- metodo post <form method="post" action="#">
