--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 						<!--	<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li> --> 
 						<!--	<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li> -->
 							<li><a href="https://github.com/alexmbar" class="icon fa-github"><span class="label">Github</span></a></li>
-						<!--	<li><a href="#" class="icon fa-dribbble"><span class="label">Dribbble</span></a></li> -->
+							<li><a href="http://hk9888.wordpress.com" class="icon fa-dribbble"><span class="label">Dribbble</span></a></li>
 							<li><a href="mailito:alexmbar891@gmail.com" class="icon fa-envelope"><span class="label">Email</span></a></li>
 						</ul>
 
