--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 						<!--	<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li> --> 
 						<!--	<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li> -->
 							<li><a href="https://github.com/alexmbar" class="icon fa-github"><span class="label">Github</span></a></li>
-							<li><a href="http://hk9888.wordpress.com" class="icon fa-dribbble"><span class="label">Dribbble</span></a></li>
+							<li><a href="https://hk9888.wordpress.com" class="icon fa-dribbble"><span class="label">Dribbble</span></a></li>
 							<li><a href="mailito:alexmbar891@gmail.com" class="icon fa-envelope"><span class="label">Email</span></a></li>
 						</ul>
 
@@ -59,7 +59,7 @@
 
 							<header>
 								<h2 class="alt"> <strong>Alejandro Martinez</strong><br/></h2>
-								<p>Soy una persona con habilidades de liderazgo comprometida el trabajo, <br />
+								<p>Soy una profesional con habilidades de liderazgo, trabajo en equipo <br />
 								creativa y entusiasta ante los nuevos retos.</p>
 							</header>
 
@@ -133,7 +133,7 @@
 						<div class="container">
 
 							<header>
-								<h3>Sobre mi</h3>
+								<h1><strong>Sobre mi<strong></h1>
 							</header>
 
 						<!-- imagen cabezera	<a href="#" class="image featured"><img src="images/pic08.jpg" alt="" /></a> --> 
@@ -153,13 +153,12 @@ Fronted, Backend, Seguridad en Servidores, Bases de datos.
 						<div class="container">
 
 							<header>
-								<h3>Contacto</h3>
+								<h1><strong>Contacto</strong></h1>
 							</header>
 
 							<p>Sería un placer para mí poder ampliar la información sobre mi formación profesional y mis competencias a través de una entrevista personal. Para ello, no dude en contactar conmigo.</p>
 									<div class="12u$">
-										<a href="mailito:alexmbar891@gmail.com">
-										<input value="Enviar mensaje" /></a>
+										<input value="Enviar mensaje" />
 									</div>
 
 							<!-- metodo post <form method="post" action="#">
