--- a/index.html
+++ b/index.html
@@ -73,13 +73,10 @@
 			<!-- Experiencia 
 					<section id="portfolio" class="two">
 						<div class="container">
-
 							<header>
 								<h2>Portfolio</h2>
 							</header>
-
 							<p>blalblalalblalba aqui poner la Experiencia.</p>
-
 							<div class="row">
 								<div class="4u 12u$(mobile)">
 									<article class="item">
@@ -124,7 +121,6 @@
 									</article>
 								</div>
 							</div>
-
 						</div>
 					</section>
 								fin Experiencia	-->
@@ -138,10 +134,10 @@
 
 						<!-- imagen cabezera	<a href="#" class="image featured"><img src="images/pic08.jpg" alt="" /></a> --> 
 
-							<p> <strong><h2> Objetivo:</strong> <br> </h2>
+							<p> Objetivo:<br> 
 Desarrollar y crecer tanto profesional como laboralmente. Compartir mis conocimientos y habilidades para lograr un desempeño satisfactorio tanto mío como de la empresa, así como ser capaz de desempeñar el puesto de manera eficiente y destacada.<br>
   
-<strong><h2>Interés Profesional:</strong><br></h2>
+Interés Profesional:<br>
 Fronted, Backend, Seguridad en Servidores, Bases de datos. 
 </p>
 
@@ -157,6 +153,9 @@ Fronted, Backend, Seguridad en Servidores, Bases de datos.
 							</header>
 
 							<p>Sería un placer para mí poder ampliar la información sobre mi formación profesional y mis competencias a través de una entrevista personal. Para ello, no dude en contactar conmigo.</p>
+									<div class="12u$">
+										<input value="Enviar mensaje" />
+									</div>
 
 							<!-- metodo post <form method="post" action="#">
 								<div class="row">
