--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
 							<header>
 								<h2 class="alt"> <strong>Alejandro Martinez</strong><br/></h2>
-								<p>Soy una profesional con habilidades de liderazgo, trabajo en equipo <br />
+								<p>Soy una persona con habilidades de liderazgo comprometida el trabajo, <br />
 								creativa y entusiasta ante los nuevos retos.</p>
 							</header>
 
@@ -129,15 +129,15 @@
 						<div class="container">
 
 							<header>
-								<h1><strong>Sobre mi<strong></h1>
+								<h2>Sobre mi</h2>
 							</header>
 
 						<!-- imagen cabezera	<a href="#" class="image featured"><img src="images/pic08.jpg" alt="" /></a> --> 
 
-							<p> Objetivo:<br> 
+							<p> <h1><strong> Objetivo:</strong> <br> </h1>
 Desarrollar y crecer tanto profesional como laboralmente. Compartir mis conocimientos y habilidades para lograr un desempeño satisfactorio tanto mío como de la empresa, así como ser capaz de desempeñar el puesto de manera eficiente y destacada.<br>
   
-Interés Profesional:<br>
+<h1><strong>Interés Profesional:</strong><br></h1>
 Fronted, Backend, Seguridad en Servidores, Bases de datos. 
 </p>
 
@@ -149,13 +149,10 @@ Fronted, Backend, Seguridad en Servidores, Bases de datos.
 						<div class="container">
 
 							<header>
-								<h1><strong>Contacto</strong></h1>
+								<h2>Contacto</h2>
 							</header>
 
 							<p>Sería un placer para mí poder ampliar la información sobre mi formación profesional y mis competencias a través de una entrevista personal. Para ello, no dude en contactar conmigo.</p>
-									<div class="12u$">
-										<input value="Enviar mensaje" />
-									</div>
 
 							<!-- metodo post <form method="post" action="#">
 								<div class="row">
