--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
 
 							<header>
 								<h2 class="alt"> <strong>Alejandro Martinez</strong><br/></h2>
-								<p>Soy una persona con habilidades de liderazgo comprometida el trabajo, <br />
-								creativa y entusiasta ante los nuevos retos.</p>
+								<p>Soy una profesional TI con habilidades de liderazgo, <br />
+								creativo y entusiasta ante los nuevos retos.</p>
 							</header>
 
 		<!-- Experiencia					<footer>
