cambios en textos

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
 							<header>
 								<h2 class="alt"> <strong>Alejandro Martinez</strong><br/></h2>
-								<p>Soy una profesional TI con habilidades de liderazgo, <br />
+								<p>Soy una profesional del TI, con habilidades de liderazgo, <br />
 								creativo y entusiasta ante los nuevos retos.</p>
 							</header>
 
@@ -135,7 +135,7 @@
 						<!-- imagen cabezera	<a href="#" class="image featured"><img src="images/pic08.jpg" alt="" /></a> --> 
 
 							<p> <h1><strong> Objetivo:</strong> <br> </h1>
-Desarrollar y crecer tanto profesional como laboralmente. Compartir mis conocimientos y habilidades para lograr un desempeño satisfactorio tanto mío como de la empresa, así como ser capaz de desempeñar el puesto de manera eficiente y destacada.<br>
+Desarrollar y crecer tanto profesional como laboralmente. Compartir mis conocimientos y habilidades para lograr un desempeño satisfactorio, así como ser capaz de desempeñar el puesto de manera eficiente y destacada.<br>
   
 <h1><strong>Interés Profesional:</strong><br></h1>
 Fronted, Backend, Seguridad en Servidores, Bases de datos. 
