--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
 							<header>
 								<h2 class="alt"> <strong>Alejandro Martinez</strong><br/></h2>
-								<p>Soy una profesional del TI, con habilidades de liderazgo, <br />
+								<p>Soy un profesional del TI, con habilidades de liderazgo, <br />
 								creativo y entusiasta ante los nuevos retos.</p>
 							</header>
 
