--- a/index.html
+++ b/index.html
@@ -1,8 +1,7 @@
 <!DOCTYPE HTML>
-
 <html>
 	<head>
-		<title>Alejandro Martinez</title>
+		<title>Ing. Alejandro Martinez</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 
@@ -19,7 +18,7 @@
 					<!-- Logo -->
 						<div id="logo">
 							<!-- Avatar <span class="image avatar48"><img src="images/avatar.jpg" alt="" /></span> --> 
-							<h1 id="title">Alejandro Martinez</h1>
+							<h1 id="title">Ing. Alejandro Martinez</h1>
 						</div>
 
 					<!-- Nav -->
@@ -177,7 +176,7 @@ Fronted, Backend, Seguridad en Servidores, Bases de datos.
 
 				<!-- Copyright -->
 					<ul class="copyright">
-						<li>&copy; 2017. Todos los derechos reservados.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+						<li>&copy; 2024. Todos los derechos reservados.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 					</ul>
 
 			</div>
